# osudroid-api-wrapper

./: .gitignore  LICENSE  main.py  pyproject.toml
classes/: replay.py
classes/base/: beatmap.py  mods.py  player.py
classes/replay_data/: cursordata.py  cursoroccurrence.py  cursoroccurrencegroup.py  movementtype.py  replayobjectdata.py
src/osudroid-api-wrapper/classes/: replay.py  score.py
src/osudroid-api-wrapper/classes/replay_data/: cursoroccurrencegroup.py  hitresult.py  replayobjectdata.py
src/osudroid-api-wrapper/structs/: profile.py
src/osudroid_api_wrapper/: __init__.py
src/osudroid_api_wrapper/classes/: __init__.py  replay.py  score.py
src/osudroid_api_wrapper/classes/base/: __init__.py  beatmap.py  modlist.py  mods.py  player.py
src/osudroid_api_wrapper/classes/base/mods/: __init__.py  mod.py  mod_approachdifferent.py  mod_auto.py  mod_autopilot.py  mod_customspeed.py  mod_difficultyadjust.py  mod_doubletime.py  mod_easy.py  mod_flashlight.py  mod_freezeframe.py  mod_halftime.py  mod_hardrock.py  mod_hidden.py  mod_mirror.py  mod_muted.py  mod_nightcore.py  mod_nofail.py  mod_perfect.py  mod_precise.py  mod_random.py  mod_reallyeasy.py  mod_relax.py  mod_replayv6.py  mod_scorev2.py  mod_smallcircles.py  mod_suddendeath.py  mod_synesthesia.py  mod_traceable.py  mod_winddown.py  (+1 more)
src/osudroid_api_wrapper/classes/replay_data/: cursordata.py  cursoroccurrence.py  cursoroccurrencegroup.py  hitresult.py  movementtype.py  replayobjectdata.py
src/osudroid_api_wrapper/structs/: profile.py
tests/: 5.odr  mod_test.py  profile_test.py  replay_test.py
(+4 files in other folders)
