[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osudroid-api-wrapper"
version = "0.0.5"
authors = [
  { name="unclem", email="mannringyt11@gmail.com" }
]
description = "Python api wrapper for osu!droid"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }

dependencies = [
  "requests>=2.26.0",
  "beautifulsoup4>=4.10.0",
  "javaobj-py3>=0.4.4",
  "stream_unzip>=0.0.99",
  "python-dotenv>=1.0.0"
]


[project.urls]
Homepage = "https://github.com/unclem2/osudroid-api-wrapper"
Issues = "https://github.com/unclem2/osudroid-api-wrapper/issues"



